fixes small screen alignment

--- a/client/app/styles/_buttons.scss
+++ b/client/app/styles/_buttons.scss
@@ -11,6 +11,11 @@
         padding:4px 4px;
         font-size:65%;
         line-height: 1;
+        min-width: 123px;
+
+        i {
+            font-size: 3em;
+        }
     }
     .h6-responsive {
         visibility: hidden;
