--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -8457,41 +8457,46 @@ h6, .h6 {
     padding: 4px 4px;
     font-size: 65%;
     line-height: 1;
+    min-width: 123px;
+  }
+  /* line 16, _buttons.scss */
+  .btn-responsive i {
+    font-size: 3em;
   }
 
-  /* line 15, _buttons.scss */
+  /* line 20, _buttons.scss */
   .h6-responsive {
     visibility: hidden;
   }
 }
-/* line 22, _buttons.scss */
+/* line 27, _buttons.scss */
 .btn-group-vertical .btn {
   border-radius: 0px;
 }
-/* line 26, _buttons.scss */
+/* line 31, _buttons.scss */
 .btn-group-vertical .btn:first-child:not(:last-child) {
   border-top-right-radius: 0px;
 }
-/* line 30, _buttons.scss */
+/* line 35, _buttons.scss */
 .btn-group-vertical .btn:last-child:not(:first-child) {
   border-bottom-left-radius: 0px;
 }
-/* line 34, _buttons.scss */
+/* line 39, _buttons.scss */
 .btn-group-vertical .btn.btn-default {
   border-color: #ddd;
 }
-/* line 37, _buttons.scss */
+/* line 42, _buttons.scss */
 .btn-group-vertical .btn.btn-info {
   background-color: transparent;
   border-color: #fff;
   border-width: 2px;
 }
-/* line 42, _buttons.scss */
+/* line 47, _buttons.scss */
 .btn-group-vertical .btn.btn-info.active, .btn-group-vertical .btn.btn-info:hover {
   background-color: rgba(255, 255, 255, 0.4);
 }
 
-/* line 47, _buttons.scss */
+/* line 52, _buttons.scss */
 .btn-group {
   float: right;
 }
